--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 /* Set the background image */
 body {
-  background-image: url('Background/Background1.png');
+  background-image: url('Background1.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
