--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 /* Set the background image */
 body {
-  background-image: url('https://cdn.discordapp.com/attachments/1118076831418028082/1141068755863081051/X4ktnxt.png');
+  background-image: url('Background/Background1.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
